build(gradle): publish plugin to maven central